class ClubIO:
    def __init__(self) -> None:
        pass
    def get_club_from_file():
        pass
    def write_club_person_to_file():
        pass