class DivisionIO:
    def __init__(self) -> None:
        pass
    def get_division_from_file():
        pass
    def write_division_person_to_file():
        pass
    