class PersonIO:
    def __init__(self, person_filename):
        self.person_filename = person_filename
    def get_person_from_file():
        pass
    def write_person_to_file():
        pass