class TeamIO:
    def __init__(self) -> None:
        pass
    def get_team_from_file():
        pass
    def write_team_person_to_file():
        pass