@startuml

class MainMenuUI  #B4a7e5
class LeaderboardUI #B4a7e5
class ScoreboardUI #B4a7e5
class DivisionUI #B4a7e5

class LogicWrapper{
    TeamLL
    ClubLL
    DivisionLL
    MatchLL
    allexposedLLfunctions()
}

class TeamLL #EB937F{
    add_team()
    get_team_txt( team_id )
    get_team( team_id )
}

class ClubLL #EB937F {
    add_club()
    get_club_txt( club_id )
    get_club( club_id )
}

class DivisionLL #EB937F {
    add_club()
    get_divisiom_txt( division_id )
    get_divisiom( division_id )
}

class MatchLL #EB937F{
    add_match()
    get_match_txt( match_id )   
    get_match( match_id )   
}

LogicWrapper -- TeamLL
LogicWrapper -- ClubLL
LogicWrapper -- DivisionLL
LogicWrapper -- MatchLL

MainMenuUI  --  LogicWrapper
LeaderboardUI -- LogicWrapper
ScoreboardUI -- LogicWrapper
DivisionUI -- LogicWrapper

TeamLL -- StorageWrapper 
ClubLL -- StorageWrapper 
DivisionLL -- StorageWrapper 
MatchLL -- StorageWrapper 

/'
Storage layer
'/
class StorageWrapper{
    MatchesIO
    PersonIO
    DivisionIO
    TeamIO
    PlayerIO
    allexposedIOfunctions()

}

class MatchesIO #ADD1b2{
    match_filename
    get_match_from_file()
    write_match_to_file()

}
class PersonIO #ADD1b2{
    persons_filename
    get_person_from_file()
    write_person_to_file()

}
class DivisionIO #ADD1b2{
    get_division_from_file()
    write_division_person_to_file()
}
class TeamIO  #ADD1b2  {
    get_team_from_file()
    write_team_person_to_file()
}
class ClubIO  #ADD1b2 {
    get_club_from_file()
    write_club_person_to_file()

}

StorageWrapper -- MatchesIO
StorageWrapper -- PersonIO
StorageWrapper -- DivisionIO
StorageWrapper -- TeamIO
StorageWrapper -- ClubIO

@enduml